traces/bug_161.txt
src/medit/path.c:126: error: DEAD_STORE
  The value written to &nbp (type int) is never used.
Showing all 1 steps of the trace


src/medit/path.c:126:5: Write of unused value
124.     path = sc->path;
125.     if ( sc->path.sec < 0 )
126.       nbp = sc->path.np;
           ^
127.     else
128.       nbp = (sc->path.sec*IMG_PER_SEC);
